name:                frames-date-test
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/frames-date-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frames-date-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       Frames >= 0.1.8,
                       base >= 4.7 && < 5,
                       foldl >= 1.2.1,
                       pipes >= 4.1.9,
                       microlens
